# vcshare

./: README.md  flake.nix  pyproject.toml
vcshare/: __init__.py  cli.py  config.py  server.py
vcshare/templates/: index.html
