[tool.poetry]
name = "vcshare"
version = "0.1.0"
description = ""
authors = ["Eduardo Espadeiro <eduardo.espadeiro@tecnico.ulisboa.pt>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
